@@ -17,8 +17,6 @@
 
 package org.apache.nifi.minifi.toolkit.schema.common;
 
-import org.apache.nifi.minifi.toolkit.schema.exception.SchemaInstantiatonException;
-
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
@@ -31,6 +29,7 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import org.apache.nifi.minifi.toolkit.schema.exception.SchemaInstantiatonException;
 
 public abstract class BaseSchema implements Schema {
     public static final String IT_WAS_NOT_FOUND_AND_IT_IS_REQUIRED = "it was not found and it is required";
@@ -176,8 +175,8 @@ public abstract class BaseSchema implements Schema {
             } else {
                 if(instantiateIfNull) {
                     try {
-                        return (T) targetClass.newInstance();
-                    } catch (InstantiationException | IllegalAccessException e) {
+                        return (T) targetClass.getDeclaredConstructor().newInstance();
+                    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                         addValidationIssue(key, wrapperName, "no value was given, and it is supposed to be created with default values as a default, and when attempting to create it the following " +
                                 "exception was thrown:" + e.getMessage());
                     }
